Update 자바와 스프링의 차이.md

--- a/study/Spring/자바와 스프링의 차이.md
+++ b/study/Spring/자바와 스프링의 차이.md
@@ -6,4 +6,16 @@
 > 스프링 MVC, 스프링 ORM 등의 기능도 스프링 프레임워크에 포함되어 있다.
 ## Spring의 장점
 
-> IOC 
+1. 경량 Container
+> Java 객체를 담고 있으며, 생성 -> 소멸과 같은 라이프 사이클을 관리하며 Spring Container로 부터 필요한
+> 객체들을 가져와 사용한다.
+2. IoC(Inversion of Control) 제어의 역전
+> 메서드나 객체의 호출 작업을 개발자가 결정하는 것이 아니라 외부에서 결정하는 것을 의미한다.
+> 개발자는 필요한 부분을 개발해서 끼워 넣기의 형태로 개발하고 실행하게 된다.
+> 즉, 조립된 코드의 최종 호출은 개발자에 의해서 이루어지는 것이 아니라, 프레임워크의 내부에서 결전된 대로
+> 이루어지게 된다.
+3. DI(Dependency Injection) 지원
+> 제어의 역항의 일어날 때 스프링이 내부에 있는 객체들간의 관계를 관리할 때 사용하는 기법이다.
+> 자바에서는 일반적으로 인터페이스를 이용해서 의존적인 객체의 관계를 최대한 유연하게 처리할 수 있도록 한다.
+5. AOP
+
