Update 자바와 스프링의 차이.md

--- a/study/Spring/자바와 스프링의 차이.md
+++ b/study/Spring/자바와 스프링의 차이.md
@@ -17,5 +17,17 @@
 3. DI(Dependency Injection) 지원
 > 제어의 역항의 일어날 때 스프링이 내부에 있는 객체들간의 관계를 관리할 때 사용하는 기법이다.
 > 자바에서는 일반적으로 인터페이스를 이용해서 의존적인 객체의 관계를 최대한 유연하게 처리할 수 있도록 한다.
-5. AOP
-> 
+5. POJO기반의 구성 (Plain Old Java Object)
+> 코드를 개발할 때, 개발자가 특정한 라이브러리나 컨테이너의 기술에 종속적이지 않음을 의미한다.
+> 자바코드를 이용해서 객체를 구성하는 방식 그대로 스프링에서 사용할 수 있다.
+> * 높은생산성과 유연한 테스트를 할 수 있다는 장점을 가진다.
+6. AOP(관점지향 프로그래밍) 지원
+> 스프링은 AOP를 통해 반복적인 코드를 줄이고 개발자가 핵심 비지니스 로직에만 집중할 수 있도록 지원한다.
+> 비지니스 로직은 아니지만 보안,로그,트랜잭션과 같이 반드시 처리가 필요한 부분을 스프링에서 공통 관심
+> 사항이라고 한다. 이들을 같은 Class 안에 메서드로 구현하면 핵심 비지니스 로직과 공통 관심 사항에 해당하는
+> 로직이 섞여서 유지보수가 매우 어렵다. 하지만 시간을 측정하는 로직은 별도의 공통 로직으로 만들기도 매우
+> 어렵다. AOP를 사용하게 된다면 원하는 곳에 공통 관심 사항을 적용할 수 있다.
+
+
+참고자료 및 출처:
+https://joychae.tistory.com/27
