--- a/study/codingTest/[프로그래머스] 신고 결과 받기.md
+++ b/study/codingTest/[프로그래머스] 신고 결과 받기.md
@@ -1,1 +1,104 @@
 # [프로그래머스] 신고 결과 받기
+```java
+package hello.core.codingTest.신고결과받기;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+
+public class Ex03 {
+    public static void main(String[] args) {
+        Solution2 solution = new Solution2();
+
+        String[] id_list = {"muzi", "frodo", "apeach", "neo"} ;
+        // 누가 누구를 신고했는지
+        String[] report = {"muzi frodo","apeach frodo","frodo neo","muzi neo","apeach muzi"};
+        int k = 2;
+
+        solution.solution(id_list,report,k);
+
+    }
+}
+class Solution2 {
+    public int[] solution(String[] id_list, String[] report, int k) {
+
+        int[] result = new int[id_list.length];
+        // 중복 제거
+        report = remove_arr_duplication(report);
+
+        //정지당한 사람 구하기
+        List<String> stopPerson =  who_is_stop(id_list, report, k);
+
+        result = resultIntArray(id_list, report, stopPerson);
+
+        return result;
+    }
+
+    public int[] resultIntArray(String[] id_list, String[] report, List<String> stopPerson) {
+        int[] result = new int[id_list.length];
+        //System.out.println("id_list = " +  Arrays.toString(id_list));
+        //System.out.println("report = " +  Arrays.toString(report));
+        //System.out.println("stopPerson = " +  Arrays.toString(stopPerson));
+        String key;
+        String value;
+        List<String> list = stopPerson;
+        for (int i = 0; i < id_list.length; i++){
+            for (int j = 0; j < report.length; j++){
+                int t = report[j].indexOf(" ");
+                String[] temp = report[j].split(" ");
+
+                key = report[j].substring(0,t);
+                value = report[j].substring(t+1);
+
+                if(key.equals(id_list[i]) && list.contains(value)){
+                    result[i]++;
+                }
+
+            }
+        }
+        System.out.println("result = " +  Arrays.toString(result));
+        return result;
+    }
+
+    //정지당한 사람 구하기
+    public List<String> who_is_stop(String[] id_list, String[] report, int k) {
+        List<String> list = new ArrayList<>();
+        String[] tempstrArray = new String[report.length];
+        List<String> tempList = new ArrayList<>();
+
+        for (int i = 0; i < report.length; i++){
+            int t =  report[i].indexOf(" ");
+            String temp = report[i].substring(t+1);
+            tempList.add(temp);
+        }
+        // result 에는 신고당한 사람들이 들어옴
+
+        for (int i = 0; i < id_list.length; i++ ){
+            if(Collections.frequency(tempList,id_list[i]) >= k){
+                list.add(id_list[i]);
+            }
+        }
+
+        return list;
+    }
+
+    // 배열의 중복을 제거하는 메서드
+    public String[] remove_arr_duplication(String[] arr){
+
+        //배열을 hashSet에 담아 중복을 제거
+        HashSet<String> hashSet = new HashSet<>(Arrays.asList(arr));
+
+        //hashSet을 배열로 변경 new String[0]으로 지정하면 배열 사이즈를 자동으로 지정
+        String[] result = hashSet.toArray(new String[0]);
+        return result;
+
+    }//remove_arr_duplication
+
+
+
+}//Solution
+
+
+```
