Update [프로그래머스] 키패드 누르기.md

--- a/study/codingTest/[프로그래머스] 키패드 누르기.md
+++ b/study/codingTest/[프로그래머스] 키패드 누르기.md
@@ -1,88 +1,115 @@
 # {프로그래머스] 키패드 누르기
 
 ```java
-static class Solution {
-	String answer = "";
-	static final List<Integer> left = new ArrayList<>();
-	static final  List<Integer> right = new ArrayList<>();
+package codingtest.키패드누르기;
 
-	public String solution(int[] numbers, String hand) {
-		left.add(10);
-		right.add(12);
-		hand = hand.toUpperCase().substring(0,1);
-		for(int i : numbers) {
-			if(i == 0) i = 11;
+import java.util.ArrayList;
+import java.util.List;
 
-			if(i %3 == 0) {
-				answer +="R";
-				right.add(i);
-				continue;
-			}
-			if(i % 3 == 1) {
-				answer +="L";
-				left.add(i);
-				continue;
-			}
-			// 2 5 8 0
-			check(i,right.get(right.size()-1) ,left.get(left.size()-1),hand);
+public class 키패드누르기 {
 
-		}
+	public static void main(String[] args) {
+		Solution solution = new Solution();
 
-		return answer;
+		int[] numbers = {7, 0, 8, 2, 8, 3, 1, 5, 7, 6, 2};
+		String hand = "left";
+		//"LRLLLRLLRRL"
+		// 
+		String result =  solution.solution(numbers, hand);
+
+		System.out.println("result = " + result);
 	}
 
-	private void check(int i, int rightTemp, int leftTemp, String hand) {
-		int a = distanceCheck(i, rightTemp);
-		int b = distanceCheck(i, leftTemp);
-		int result = a - b;
+	static class Solution {
+		static String answer = "";
+		static final List<Integer> LEFT = new ArrayList<>();
+		static final List<Integer> RIGHT = new ArrayList<>();
+		static final String L = "L";
+		static final String R = "R";
 
-		if(result == 0) {
-			answer += hand;
-			switch (hand) {
-			case "L":
-				left.add(i);
-				break;
-			case "R":
-				right.add(i);
-				break;
+		public String solution(int[] numbers, String hand) {
+			LEFT.add(10);
+			RIGHT.add(12);
+			hand = hand.toUpperCase().substring(0,1);
+
+			for(int i : numbers) {
+				if(i == 0) i = 11;
+
+				if(i %3 == 0) {
+					answer += R;
+					RIGHT.add(i);
+					continue;
+				}
+				if(i % 3 == 1) {
+					answer += L;
+					LEFT.add(i);
+					continue;
+				}
+
+				check(i,RIGHT.get(RIGHT.size()-1) ,LEFT.get(LEFT.size()-1), hand);
+
 			}
-		}else if(result > 0) {
-			answer += "L";
-			left.add(i);
-		}else {
-			answer += "R";
-			right.add(i);
+
+			return answer;
 		}
 
+		private void check(int i, int rightTemp, int leftTemp, String hand) {
+			int a = distanceCheck(i, rightTemp);
+			int b =  distanceCheck(i, leftTemp);
+			int result = a - b;
 
-	}
+			if(result == 0) {
+				answer += hand;
+				switch (hand) {
+				case L:
+					LEFT.add(i);
+					break;
+				case R:
+					RIGHT.add(i);
+					break;
+				}
+			}else if(result > 0) {
+				answer += L;
+				LEFT.add(i);
+			}else {
+				answer += "R";
+				RIGHT.add(i);
+			}
 
-	//거리를 체크하는 메서드
-	private int distanceCheck(int finger, int i) {
-		int result = 0;
-		switch (Math.abs(finger - i)) {
-		case 1:
-		case 3:
-			result = 1;
-			break;
-		case 2:
-		case 4:
-		case 6:
-			result = 2;
-			break;
-		case 5:
-		case 7:
-		case 9:
-			result = 3;
-			break;
-		case 10:
-		case 8:
-			result = 4;
-			break;
 
 		}
 
-		return result;
+		//거리를 체크하는 메서드
+		private int distanceCheck(int finger, int i) {
+			int result = 0;
+			switch (Math.abs(finger - i)) {
+			case 1:
+			case 3:
+				result = 1;
+				break;
+
+			case 2:
+			case 4:
+			case 6:
+				result = 2;
+				break;
+
+			case 5:
+			case 7:
+			case 9:
+				result = 3;
+				break;
+
+			case 10:
+			case 8:
+				result = 4;
+				break;
+
+			}
+
+			return result;
+		}
 	}
 }
+
 ```
