--- a/study/JAVA/연산자.md
+++ b/study/JAVA/연산자.md
@@ -210,18 +210,133 @@ true와 false 둘 중 하나이다.
 |>=|좌변 값이 크거나 같으면, true or false|
 |<=|좌변 값이 작거나 같으면, true or false|
 
+## 등가비교 연산자 == !=
+|비교연산자|연산결과|
+|----------|--------|
+|==|두 값이 같으면 true or false|
+|!=|두 값이 다르면, true or false|
+'='는 변수의 값을 저장할 때 사용하는 '대입연산자'이기 때문에 '=='로 두 값이 같은지 비교하는 연산자를 표현한다.
+
+## 문자열 비교
+두 문자열을 비교할 때는, 비교연산자 '==' 대신 equals()라는 메서드를 사용해야 한다.
+```java
+String str = new String("abc");
+
+boolean result = str.equals("abc"); // 내용이 같으므로 result에 true가 저장됌
+
+boolean result2 = str.equals("abc"); // 같은 내용이지만 다른 객체이기 때문에 false이다.
+```
+* 원래 String은 클래스이므로, 아래와 같이 new를 사용해서 객체를 생성해야 한다.
+```java
+String str = new String("abc");     // String 클래스의 객체를 생성
+String str = "abc"                  // 위의 문장을 간단히 표현
+```
+그러나 특별히 String만 new를 사용하지 않고, 위와 같이 간단히 쓸 수 있게 허용된다.   
+자세한 내용은 9장에 설명되어 있다.
+
+## 논리 연산자 &&, ||, !
+- && : 그리고(AND)에 해당하며, 두 피연산자가 모두 true 일 때만 true 결과로 얻는다.
+- || : 또는(OR)에 해당하며, 두 피연산자 중 어느 한쪽만 true여도 true 결과로 얻는다.
+- 논리연산자는 피연산자로 boolean형 또는 boolean 형 값을 결과로 하는 조건식만 혀용한다.
+
+- x는 10보다 크고, 20보다 작다.
+```java
+10 < x && x < 20
+```
+- i는 2의 배수 또는 3의 배수이다.
+```java
+i % 2 == 0 || i % 3 == 0
+```
+- i는 2의 배수 또는 3의 배수지만 6의 배수는 아니다.
+```java
+(i % 2 == 0 || i % 3 == 0) && i % 6 !=0
+```
+
+## 효율적인 연산(short circuit evalution)
+OR 연산 경우 어느 한쪽만 참이여도 참이기 때문에 좌측 피연산자가 true이면 우츨 피연산자의 값은 평가하지 않는다.   
+연산결과가 참일 확률이 높은 피연산자를 연산자의 왼쪽에 놓아야 더 빠른 연산결과를 얻을 수 있다.
+
+## 논리 부정 연산자 !
+이 연산자는 피연산자가 true이면 false를, false이면 true를 결과로 반환한다. 
+
+```java
+ch < 'a' || ch > 'z'
+```
+문자 ch는 소문자가 아니다. 라는 조건을 위 처럼 쓰기보다 아래처럼 쓰면 알기 쉽다.
+```java
+!('a' <= ch && ch <= 'z')
+```
+
+## 비트연산자 & | ^ ~ << >>
+비트 연산자는 피연산자를 비트단위로 논리 연산한다. 피연산자를 이진수로 표현했을 때의 각 자리를   
+아래의 규칙에 따라 연산을 수행하며, 피연산자로 실수는 허용하지 않는다. 정수(문자 포함)만 허용된다.
+```
+| (OR연산자)      피연산자 중 한 쪽의 값이 1이면, 1을 결과로 얻는다. 그 외에는 0을 얻는다.
+& (AND연산자)     피연산자 양 쪽이 모두 1이어만 1을 결과로 얻는다. 그 외에는 0을 얻는다.
+^ (XOR연산자)     피연산자의 값이 서로 다를 때만 1을 결과로 얻는다. 같을 때는 0을 얻는다.
+```
 
 
+## 그 외 연산자
+## 조건 연산자 ? :
+조건 연산자는 조건식, 식1, 식2 모두 3개의 피연산자를 필요로 하는 삼항 연산자이며, 삼항 연산자는 조건 연산자는 하나뿐이다.
+```java
+조건식 ? 식1 : 식2
+// 참이면 식1 거짓이면 식2
 
+result = (x > y) ? x : y;
+```
+조건 연산자는 조건문인 if문으로 바꿔 쓸 수 있으며, if문 대신 조건 연산자를 사용하면 코드를 보다 간단히 할 수 있다.
+```java
+result = (x > y) ? x : y;
 
+->
 
+if (x > y)
+   result = x; // true 일떄
+else
+   result = y; // false 일때
+```
 
+## 대입연산자 = op=
+대입 연산자는 변수와 같은 저장공간에 값 또는 수식의 연산 결과를 저장하는데 사용된다.   
+이 연산자는 오른쪽 피연산자의 값을 왼쪽 피연산자에 저장한다. 그리고 저장된 값을 연산결과로 반환한다.
+```java
+System.out.print(x = 3); // 변수 x에 3이 저장되고
+System.out.print(3); // 연산결과인 3이 출력된다.
+```
+대입연산자는 연산자들 중에서 가장 낮은 우선순위를 가지고 있기 때문에 식에서 제일 나중에 수행된다.   
+연산 진행 방향이 오른쪽에서 왼쪽이기 떄문에 'x=y=3'에서 'y=3'이 먼저 수행되고 그 다음에 'x=y'가 수행된다.
 
+### lvalue 와 rvalue
+대입 연산자의 왼쪽 피연산자를 'lvalue'라고 하고, 오른쪽 피연산자를 'rvalue'라고 한다.   
+대입연산자의 rvalue는 변수뿐만 아니라 식이나 상수 등 모두 가능한 반면, lvalue는 반드시 변수처럼 값을   
+변경할 수 있는 것이어야 한다. 그래서 리터럴이나 상수같이 값으 저장할 수 없는 것들은 lvalue가 될 수 없다.
+```java
+int i = 0;
+3 = i + 3; // 에러. lvalue가 값을 저장할 수 있는 공간이 아니다.
+i + 3 = i; // 에러. lvalue의 연산결과는 리터럴
 
+final int MAX = 3; // 변수 앞에 키워드 final을 붙이면 상수가 된다.
+MAX = 10; // 에러. 상수 (MAX)에 새로운 값이 저장될 수 없다.
+```
 
+### 복합 대입 연산자
+대입연산자는 다른 연산자(op)와 결합하여 'op='와 같은 방식으로 사용될 수 있다.   
+결합된 두 연산자는 반드시 공백없이 붙여 써야 한다.
+| op= | = |
+|-----|---|
+|i += 3;| i = i + 3;|
+|i -= 3;|i = i - 3;|
+|i *= 3;|i = i * 3;|
+|i /=3;|i = i / 3;|
+|i %= 3;|i = i % 3;|
+|i <<= 3;|i = i << 3;|
+|i >>= 3;|i = i >> 3;|
+|i &= 3;|i = i & 3;|
+|i ^= 3;|i = i ^ 3;|
+|i *= 10 + j;|i = i * (10 + j);|
+   
+i |= 3; i = i | 3;
 
-
-
-
-
-
+* 비트연산자 마무리 못함
