--- a/study/JAVA/배열.md
+++ b/study/JAVA/배열.md
@@ -140,7 +140,73 @@ System.arraycopy(num, 0, newNum, 0, num.length);
 
 
 
+## String 배열
+## Stromg 배열의 선언과 생성
+배열의 타입이 String인 경우에도 int 배열의 선언과 생성방법이 다르지 않다.
+```java
+String[] name = new String[3]; // 3개의 문자열얼 담을 수 있는 배열을 생성한다.
+```
+3개의 String 타입의 참조변수를 저장하기 위한 공간이 마련되고 참조형 변수의 기본값은 null이므로   
+각 요소의 값은 null로 초기화 된다.
+|자료형|기본값|
+|-----|------|
+|boolean|false|
+|char|'\u0000'|
+|byte,short,int|0|
+|long|0L|
+|float|0.0f|
+|double|0.0d 또는 0.0|
+|참조형 변수|null|
+타입에 따른 변수의 기본값
 
+## String 배열의 초기화
+```java
+String[] name = new String[3];
+name[0] = "kim";
+name[1] = "park";
+name[2] = "yi";
+
+String[] name = {"kim", "park", "yi"};
+```
+특별히 String 클래스만 "Kim"과 같이 큰따옴표만으로 간략히 표현하는 것이 허용되지만   
+원래 String은 클래스이므로 아래처럼 new 연산자를 통해 객체를 생성해야 한다.
+```java
+String[] name = new String[3];
+name[0] = new String("kim");
+name[1] = new String("park");
+name[2] = new String("yi");
+```
+-> 배열에 실제 객체가 아닌 객체의 주소가 저장되어 있다. 기본형 배열이 아닌 경우 배열에 저장되는 것은   
+객체의 주소이다. 참조형 배열을 객체 배열이라고도 한다.
+
+## char 배열과 String 클래스
+String클래스는 char배열에 기능(메서드)를 추가한 것이다.   
+char배열과 String클래스의 한가지 중요한 차이가 있는데, String객체(문자열)은 읽을 수 있을 뿐   
+내용은 변경할 수 없다는 것이다.
+```java
+String str = "Java";
+str = str + "8";      // Java8 이라는 새로운 문자열이 str에 저장된다.
+System.out.print(str) // Java8
+```
+
+## String클래스의 주요 메서드
+|메서드|설명|
+|-----|-----|
+|char charAt(int index)|문자열에서 해당 위치가 있는 문자를 반환한다.|
+|int length()|문자열의 길이를 반환한다.|
+|String substring(int from, int to)|문자열에서 해당 범위(from ~ to)에 있는 문자열을 반환한다.|
+|boolean equals(Object obj)|문자열의 내용이 obj와 같은지 확인한다. 같으면 결과는 true, 다르면 false가 된다.|
+|char[] toCharArray()|문자열을 문자배열로 변환하여 반환한다.|
+
+## char배열과 String클래스의 변환
+```java
+char[] chArr = {'A', 'B', 'C'};
+String str = new String(chArr); // char배열 -> String
+char[] temp = str.toCharArray(); // String -> char배열
+```
+ 
+## 다차원 배열
+메모리의 용량이 허용하는 한, 차원의 제한은 없지만, 주로 1, 2차원 배열이 많이 사용됩니다.
 
 
 
