--- a/study/JAVA/배열.md
+++ b/study/JAVA/배열.md
@@ -207,13 +207,87 @@ char[] temp = str.toCharArray(); // String -> char배열
  
 ## 다차원 배열
 메모리의 용량이 허용하는 한, 차원의 제한은 없지만, 주로 1, 2차원 배열이 많이 사용됩니다.
+```java
+int[][] score = new int[4][3];  // 4행 3열의 2차원 배열을 생성한다.
+```
+[] [] []   
+[] [] []   
+[] [] []   
+[] [] []   
+배열 score의 1행 1열에 100을 저장하고, 이값을 출력하려면 다음과 같이 하면 된다.
+```java
+score[0][0] = 100;
+System.out.print(score[0][0])
+```
 
+## 2차원 배열의 초기화
+2차원 배열도 괄호{}를 사용해서 생성과 초기화를 동시에 할 수 있다. 다만, 1차원 배열보다 괄호{}를 한번 더 써서   
+행별로 구분해 준다.
+```java
+int[][] arr = {{1, 2, 3},
+               {4, 5, 6}}; 
+```
+2차원 배열은 '배열의 배열'으로 구성되어 있다. 즉, 여러개의 1차원 배열을 묶어서 하나의 배열을 만든 것이다.
 
+```java
+package javaExample;
 
+public class Ex01 {
+    public static void main(String[] args) {
 
+        int[][] score = {
+                            {100, 100, 100},
+                            {20, 20, 20},
+                            {30, 30, 30},
+                            {40, 40, 40}
+                        };
+        int sum = 0;
+        System.out.println("score length = " + score.length);
+        for (int i = 0; i < score.length; i++){
+            for(int j = 0; j < score[i].length; j++){
+                System.out.printf("score[%d][%d]=%d%n", i, j, score[i][j]);
+//                score[0][0]=100
+//                score[0][1]=100
+//                score[0][2]=100
+//                score[1][0]=20
+//                score[1][1]=20
+//                score[1][2]=20
+//                score[2][0]=30
+//                score[2][1]=30
+//                score[2][2]=30
+//                score[3][0]=40
+//                score[3][1]=40
+//                score[3][2]=40
+            }
+        }
 
+        for (int[] temp : score) {
+            for (int i : temp){
+                sum += i;
+            }
+        }
+        System.out.println("sum=" + sum); // 570
 
+    }
+}
+```
 
+## 가변 배열
+2차원 이상의 다차원 배열을 생성할 때 전체 배열 차수 중 마지막 차수의 길이를 지정하지 않고,   
+추후에 각기 다른 길이의 배열을 생성함으로써 고정된 형태가 아닌 보다 유동적인 가변 배열을 구성할 수 있다.
+```java
+int[][] score = new int[5][];
+score[0] = new int[4];
+score[1] = new int[3];
+score[2] = new int[2];
+score[3] = new int[2];
+score[4] = new int[3];
+```
+[][][][]   
+[][][]   
+[][]   
+[][]   
+[][][]   
 
 
 
