--- a/study/JAVA/연산자.md
+++ b/study/JAVA/연산자.md
@@ -276,6 +276,18 @@ ch < 'a' || ch > 'z'
 ^ (XOR연산자)     피연산자의 값이 서로 다를 때만 1을 결과로 얻는다. 같을 때는 0을 얻는다.
 ```
 
+## 비트 전환 연산자 ~
+이 연산자는 피연산자를 2진수로 표현했을 때, 0은 1로, 1은 0으로 바꾼다. 논리부정 연산자 '!'와 유사하다
+```java
+byte p = 10;
+System.out.print(toBinaryString(~p));
+```
+## 시프트 연산자 << >>
+이 연산자는 피연산자의 각 자리(2진수로 표현했을 때)를 오른쪽 >> 또는 왼쪽 << 으로 이동한다 해서 쉬프트 연산자이다.
+```
+int dec = 8;
+toBinaryString(dec >> 1);
+```
 
 ## 그 외 연산자
 ## 조건 연산자 ? :
@@ -339,4 +351,9 @@ MAX = 10; // 에러. 상수 (MAX)에 새로운 값이 저장될 수 없다.
    
 i |= 3; i = i | 3;
 
-* 비트연산자 마무리 못함
+
+
+   
+
+출처
+자바의 정석 -남궁성 
