--- a/study/JAVA/변수와 메서드.md
+++ b/study/JAVA/변수와 메서드.md
@@ -134,19 +134,90 @@ void 를 적어야한다.
 
 ### 지역변수(local variable)
 메서드 내에 선언된 변수들은 그 메서드 내에서만 사용할 수 있으므로 서로 다른 메서드라면
-같은 이름의 변수를 선언해도 된다. 메서드 내에 선언된 변수를 '지역변수'라고 한다.
+같은 이름의 변수를 선언해도 된다. 메서드 내에 선언된 변수를 '지역변수'라고 한다.   
+매개변수도 지역변수이다!!!
+```java
+int add(int x, int y) {
+        int result = x + y;
+        return result;
+}
+
+int add2(int x, int y) {
+        int result = x + y;
+        return result;
+}
+```
+x, y, result는 이름만 같을 뿐 서로 다른 변수이다.
 
 
+### 메서드의 호출
+메서드를 호출해야만 구현부 {}의 문장들이 수행된다. 메서드를 호출하는 방법은 다음과 같다.
+* main메서드는 프로그램 실행 시 OS에 의해 자동적으로 호출된다.
+```java
+메서드 이름 (값1, 값2, ...); // 메서드를 호출하는 방법
+int result = add(3, 5);
+```
 
+### 인자(argument)와 매개변수(parameter)
+메서드를 호출할 때 괄호()안에 지정해준 값들을 인자 또는 인수라고 하는데, 인자의 개수와 순서는 호출된 메서드에 선언된 매개변수와 일치해야한다.
+```java
+public static void main(String args[]) {
+        int result = add(3, 5); //메서드를 호출
+                       /// 인자 (원본)
+        
+        int add(int x, int y) { // 매개변수
+                int result = x + y;
+                return result;
+        }
+}
+```
 
+### 메서드의 실행흐름
+- 같은 클래스 내의 메서드끼리는 참조변수를 사용하지 않고도 서로 호출이 가능하다.
+- static 메서드는 같은 클래스 내의 인스턴스 메서드를 호출할 수 없다.
+```java
+class MyMath {
+    long add(long a, long b) {
+        return a + b;
+    }
+    long substract(long a, long b) {
+        return a - b;
+    }
+    long multiply(long a, long b) {
+        return a * b;
+    }
+    double divide(double a, double b) {
+        return a / b;
+    }
+}
 
+public class Ex03 {
+    public static void main(String[] args) {
+            MyMath mm = new MyMath();
 
+            long value = mm.add(1L, 2L);
+    }
+}
+```
+1. main 메서드에서 메서드 add를 호출한다. 호출 시 지정한 1L과 2L이 메서드 add의 매개변수 a,b에 각각 복사된다.
+2. 메서드 add의 괄호{} 안에 있는 문장들이 순서대로 수행된다.
+3. 메서드 add의 모든 문장이 실행되거나 return문을 만나면, 호출할 메서드(main 메서드)로 되돌아 와서 이후의 문장들을 실행한다.
 
+## return 문
+return문은 현재 실행중인 메서드를 종료하고 호출한 메서드로 되돌아간다. 반환타입이 void인 경우,
+return;을 자동적으로 추가해준다.
 
-
-
-
-
+## 매개변수의 유효성 검사
+```java
+float divide(int x, int y) {
+        if(y == 0){
+            System.out.print("0으로 나눌 수 없습니다.");
+            return 0;
+        }
+        return x / (float) y;
+}
+```
+매개변수의 값이 적절한지 확인을 해야한다.
 
 
 
@@ -155,31 +226,4 @@ void 를 적어야한다.
 참조   
 [http://www.tcpschool.com/java/java_datatype_variable](http://www.tcpschool.com/java/java_datatype_variable)
 
-[남궁성 자바의 정석](남궁성 자바의 정석)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+[남궁성 자바의 정석]
