--- a/study/JAVA/다형성.md
+++ b/study/JAVA/다형성.md
@@ -32,22 +32,169 @@ Tv t = new CaptionTv();
 이 경우 실제 인스턴스가 CaptionTv타입이라 할지라도, 참조변수 t로는 CaptionTv 인스턴스의 모든 멤버를 사용할 수 없다.
 t.text, t.caption()는 사용 불가능하다.   
 둘 다 같은 타입의 인스턴스지만 참조변수의 타입에 따라 사용할 수 있는 멤버의 개수가 달라진다.
+- 참조변수가 사용할 수 있는 멤버의 개수는 인스턴스의 멤버 개수보다 같거나 적어야 한다.
+- 클래스는 상속을 통해서 확장될 수는 있어도 축소될 수는 없어서, 조상 인스턴스의 멤버 개수는 자손 인스턴스의 멤버 개수보다 항상 적거나 같다.
+- 모든 참조변수는 null 또는 4 byte의 주소값이 저장되며, 참조변수의 타입은 참조할 수 있는 객체의 종류와 사용할 수 있는 멤버의 수를 결정한다.   
+   
+- 조상타입의 참조변수로 자손타입의 인스턴스를 참조할 수 있다.
+- 반대로 자손타입의 참조변수로 조상타입의 인스턴스를 참조할 수 없다.
+-> 예시 Car
 
+## 참조변수의 형변환
+기본형 변수와 같이 참조변수도 형변환이 가능하다. 단, 서로 상속관계에 있는 클래스 사이에서만 가능하기 때문에 자손타입의 참조변수를 조상타입의 참조변수로,
+조상타입의 참조변수를 자손타입의 참조변수로 형변환만 가능하다.
+```
+자손타입 -> 조상타입(up-casting) : 형변환 생략가능
+자손타입 <- 조상타입(down-cating) : 형변환 생략불가
+```
+형변환을 할 때 컴파일에러가 발생하지 않고 런타임 에러가 발생할 수 있는 확률이 있다. 형변환을 수행하기 전에 instanceof 연산자를 사용해서 참조변수가
+참조하고 있는 실제 인스턴스 타입을 확인하는 것이 안전하다.
+- 형변환은 참조변수의 타입을 변환하는 것이지 인스턴스를 변환하는 것은 아니기 때문에 참조변수의 형변환은 인스턴스에 아무런 영향을 미치지 않는다.
+- 단지 참조변수의 형변환을 통해서, 참조하고 있는 인스턴스에서 사용할 수 있는 멤버의 범위를 조절하는 것뿐이다.
+```java
+public class CastringTest2 {
+    public static void main(String[] args) {
+        Car car = new Car();
+        Car car2 = null;
+        FireEngine fe = null;
 
+        car.drive();
+        fe = (FireEngine) car;
+        fe.drive();
+        car2 = fe;
+        car2.drive();
+    }
 
+    static class Car {
+        String color;
+        int door;
 
+        void drive() {
+            System.out.println("drive");
+        }
+        void stop() {
+            System.out.println("stop");
+        }
 
+    }
+    static class FireEngine extends Car {
+        void water() {
+            System.out.println("water");
+        }
+    }
+}
+```
+참조변수 car가 참조하고 있는 인스턴스가 Car타입의 인스턴스라는데 있다.   
+조상타입의 인스턴스를 자손타입의 참조변수로 참조하는 것은 허용하지 않는다.
 
+## instanceof 연산자
+참조변수가 참조하고 있는 인스턴스의 실제 타입을 알아보기 위해 instanceof연산자를 사용한다.   
+instanceof의 왼쪽에는 참조변수를 오른쪽에는 타입(클래스명)이 피연산자로 위치한다.   
+- 값이 null인 참조변수에 대해 instanceof연산을 수행하면 false를 결과로 얻는다.
 
+```java
+void doWork(Car c) {
+      if (c instanceof FireEngine) {
+            FireEngine Fe = (FireEngine) c;
+            fe.water;
+      }
+      else if (c instanceof Ambulance) {
+            Ambulance a = (Ambulance) c;
+      }
+}
+```
+어떤 타입에 대한 instanceof연산의 결과가 true라는 것은 검사한 타입으로 형변환이 가능하다는 것을 뜻한다.
 
+## 참조변수와 인스턴스의 연결
+메서드의 경우 조상 클래스의 메서드를 자손의 클래스에서 오버라이딩한 경우에도 참조변수의 타입에
+관계없이 항상 실제인스턴스의 메서드(오버라이딩된 메서드)가 호출되지만, 멤버변수의 경우 참조변수의
+타입에 따라 달라진다.
+```java
+public class BindingTest {
+    public static void main(String[] args) {
+        Parent p = new Child();
+        Child c = new Child();
 
+        System.out.println("p.x = " + p.x);
+        p.method();
 
+        System.out.println("c.x = " + c.x);
+        c.method();
+        
+    }
+}
+class Parent {
+    int x = 100;
 
+    void method() {
+        System.out.println("parent method");
+    }
+}
+class Child extends Parent {
+    int x = 200;
 
+    void method() {
+        System.out.println("child Method");
+    }
+}
+```
 
+## 매개변수의 다형성
+참조변수의 다형적인 특징은 메서드의 매개변수에도 적용된다.
+```java
+class Product {
+    int price;
+    int bonusPoint;
 
+    Product(int price) {
+        this.price = price;     // 제품의 가격
+        bonusPoint = (int) (price/10.0); // 제품 구매 시 제공하는 보너스 점수
+    }
+}
 
+class Tv extends Product {
+    Tv() {
+        super(100);
+    }
+    public String toString() {
+        return "TV";
+    }
+}
+class Computer extends Product {
+    Computer() { super(200);}
+    public String toString() {
+        return "Computer";
+    }
+}
 
+class Buyer {           // 고객, 물건을 사는 사람
+    int money = 1000;   // 소유금액
+    int bonusPoint = 0; // 보너스점수
+
+    void buy(Product p) {
+        if (money < p.price) {
+            System.out.println("잔액이 부족해서 물건을 살 수 없습니다.");
+            return;
+        }
+
+        money -= p.price;           // 가진 돈에서 구입한 제품의 가격을 뺸다.
+        bonusPoint += p.bonusPoint; // 제품의 보너스 점수를 추가한다.
+        System.out.println(p + "구입하였습니다.");
+    }
+}
+public class PolyArgumentTest {
+    public static void main(String[] args) {
+        Buyer b = new Buyer();
+
+        b.buy(new Tv());
+        b.buy(new Computer());
+
+        System.out.println("현재 남은 돈은" + b.money + "만원입니다.");
+        System.out.println("현재 보내스점수는" + b.bonusPoint + "점입니다.");
+    }
+
+}
+```
 
 
 
