--- a/Diary/2024-04.md
+++ b/Diary/2024-04.md
@@ -8,3 +8,8 @@
 
 3. 인프런 - [Spring Security 완전 정복 [6.x 개정판]](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%EC%8B%9C%ED%81%90%EB%A6%AC%ED%8B%B0-%EC%99%84%EC%A0%84%EC%A0%95%EB%B3%B5/dashboard)
    - 기본 인증 필터 - BasicAuthenticationFilter
+
+### 4/27
+
+1. 가상 면접 사례로 배우는 대규모 시스템 설계 독서
+2. 스프링 부트 JPA 모범 사례 독서
