feat : diary 작성

--- a/Diary/2024-04.md
+++ b/Diary/2024-04.md
@@ -1,4 +1,4 @@
-### 4/26
+### 4/25
 
 1. Stack이 아닌 Deque를 사용해야 하는 이유
 2. 우아한 기술블로그 - Java의 미래, Virtual Thread
@@ -9,7 +9,11 @@
 3. 인프런 - [Spring Security 완전 정복 [6.x 개정판]](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%EC%8B%9C%ED%81%90%EB%A6%AC%ED%8B%B0-%EC%99%84%EC%A0%84%EC%A0%95%EB%B3%B5/dashboard)
    - 기본 인증 필터 - BasicAuthenticationFilter
 
-### 4/27
+### 4/26
 
 1. 가상 면접 사례로 배우는 대규모 시스템 설계 독서
 2. 스프링 부트 JPA 모범 사례 독서
+
+### 4/28
+
+1. 자바 ORM 표준 JPA 프로그래밍 독서 & 도메인 설계
