--- a/Diary/2024-04.md
+++ b/Diary/2024-04.md
@@ -64,3 +64,16 @@
 
 1. [인프런] 견고한 결제 시스템 구축 강의  
    ㄴ> 코틀린 springboot 3 프로젝트 설정 애먹음
+
+### 5/10
+
+1. [인프런] 견고한 결제 시스템 구축 강의
+
+### 5/11
+
+1. [인프런] 견고한 결제 시스템 구축 강의
+
+### 5/12
+
+1. [인프런] 견고한 결제 시스템 구축 강의
+2. [인프런] 자바 코딩테스트 - it 대기업 유제 강의 시작
